sfdx/force-app/main/default/objects/Account/fields/A_B_Code__c.field-meta.xml
<CustomField>
    <fullName>A_B_Code__c</fullName>
    <label>A/B Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>