sfdx/force-app/main/default/objects/Account/fields/Account_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Account_Acronym__c</fullName>
    <label>Account Acronym</label>
    <length>20</length>
    <type>Text</type>
</CustomField>