sfdx/force-app/main/default/objects/Account/fields/Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Level__c</fullName>
    <label>Account Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4+</fullName>
            </value>
            <value>
                <fullName>Level 3 or below</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>