sfdx/force-app/main/default/objects/Account/fields/Agency_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Agency_Acronym__c</fullName>
    <description>Displays Level 1 Agency Acronym</description>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Account_Acronym__c,
IF(NOT(ISBLANK(Parent.Parent.Parent.Id)), Parent.Parent.Parent.Account_Acronym__c,
IF(NOT(ISBLANK(Parent.Parent.Id)), Parent.Parent.Account_Acronym__c,
IF(NOT(ISBLANK(Parent.Id)), Parent.Account_Acronym__c,
IF(ISBLANK(Parent.Id), Account_Acronym__c,
&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Acronym</label>
    <type>Text</type>
</CustomField>