sfdx/force-app/main/default/objects/Account/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <inlineHelpText>Please input the 2-digit Agency Code associated with this agency.</inlineHelpText>
    <label>Agency Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>