sfdx/force-app/main/default/objects/Account/fields/CircularReferenceCheck__c.field-meta.xml
<CustomField>
    <fullName>CircularReferenceCheck__c</fullName>
    <formula>IF(OR(Id = Parent.Parent.Id ,Id = Parent.Parent.Parent.Id,Id = Parent.Parent.Parent.Id),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CircularReferenceCheck</label>
    <type>Checkbox</type>
</CustomField>