sfdx/force-app/main/default/objects/Account/fields/Deprecated_State__c.field-meta.xml
<CustomField>
    <fullName>Deprecated_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated_State</label>
    <type>Checkbox</type>
</CustomField>