sfdx/force-app/main/default/objects/Account/fields/LDGCRM_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Market_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked Market Segment</description>
    <inlineHelpText>Select a linked Market Sgment</inlineHelpText>
    <label>Market Segment</label>
    <referenceTo>LDGCRM_Market_Segment__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>LGDCRM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>