sfdx/force-app/main/default/objects/Account/fields/Level_1_Account__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Account__c</fullName>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Id)), Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Id)), Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Id)), Parent.Name,
IF(ISBLANK(Parent.Id), Name,
&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 1 Account</label>
    <type>Text</type>
</CustomField>