sfdx/force-app/main/default/objects/Account/fields/Level_2_Account__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Account__c</fullName>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Id)), Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Id)), Parent.Name,
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 2 Account</label>
    <type>Text</type>
</CustomField>