sfdx/force-app/main/default/objects/Account/recordTypes/Federal.recordType-meta.xml
<RecordType>
    <fullName>Federal</fullName>
    <active>true</active>
    <description>Use this record type for creating federal agency or bureau accounts. For example, Department of Homeland Security (DHS)</description>
    <label>Federal</label>
</RecordType>