sfdx/force-app/main/default/objects/Account/recordTypes/TTS_Individual.recordType-meta.xml
<RecordType>
    <fullName>TTS_Individual</fullName>
    <active>true</active>
    <description>TTS Individual</description>
    <label>TTS Individual</label>
</RecordType>