sfdx/force-app/main/default/objects/Account/validationRules/Level1_and_Level2_account_restrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>Level1_and_Level2_account_restrictions</fullName>
    <active>false</active>
    <description>Restricts the creating and editing of Level 1 and Level 2 accounts to only SAdmins  SFPEO -1037 and SFPEO -1038</description>
    <errorConditionFormula>FALSE</errorConditionFormula>
    <errorMessage>Only System Admins can create or edit level 1 or level 2 accounts</errorMessage>
</ValidationRule>