sfdx/force-app/main/default/objects/Account/validationRules/Level_1_cannot_have_Parent_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_1_cannot_have_Parent_Account</fullName>
    <active>true</active>
    <description>Level 1 Account requires a null value in &apos;Parent Account&apos; field</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Federal&quot; &amp;&amp;
(
(ISPICKVAL( Account_Level__c, &apos;Level 1&apos;) &amp;&amp; !ISBLANK(ParentId))
)</errorConditionFormula>
    <errorDisplayField>Account_Level__c</errorDisplayField>
    <errorMessage>In order to save this record as a &apos;Level 1&apos;  Account you must clear the value in &apos;Parent Account&apos; field</errorMessage>
</ValidationRule>