sfdx/force-app/main/default/objects/Account/validationRules/Parent_Account_Required_for_Level_3_Acct.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Account_Required_for_Level_3_Acct</fullName>
    <active>true</active>
    <description>Parent Account is Required for Level 3 or below Accounts.</description>
    <errorConditionFormula>AND(
RecordType.Name=&apos;Federal&apos;,
ISPICKVAL(Account_Level__c , &apos;Level 3 or below&apos;),
ISBLANK(ParentId)
)</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Parent Account is Required for Level 3 or below Accounts.</errorMessage>
</ValidationRule>