sfdx/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Level__c</columns>
    <columns>Agency_Code__c</columns>
    <columns>LDGCRM_Market_Segment__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>