sfdx/force-app/main/default/objects/Account/listViews/LDGCRM_All_Login_Gov_Accounts.listView-meta.xml
<ListView>
    <fullName>LDGCRM_All_Login_Gov_Accounts</fullName>
    <columns>LDGCRM_Market_Segment__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Level__c</columns>
    <columns>Agency_Code__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Login.gov Accounts</label>
    <sharedTo>
        <group>LDGCRM_Team_Members</group>
    </sharedTo>
</ListView>